--- a/concept/index.htm
+++ b/concept/index.htm
@@ -2,18 +2,18 @@
 <!DOCTYPE html 
      PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег | е│еєе╗е╫е╚</title>
+<title>CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг | уВ│уГ│уВ╗уГЧуГИ</title>
 
 
-<meta http-equiv="content-type" content="text/html; charset=euc-jp" />
-<meta http-equiv="content-language" content="ja" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="content-language" content="zh" />
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег" />
-<meta name="keywords" content="CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег" />
+<meta name="description" content="CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" />
+<meta name="keywords" content="CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -35,7 +35,7 @@
               <tr>
                 <td><table border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH епеъе╞егелеые┘еэе╖е╞ег" width="760" height="100" border="0" /></a></td>
+                    <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" width="760" height="100" border="0" /></a></td>
                   </tr>
                   <tr>
                     <td class="c"><div id="navigation" align="center">
@@ -43,11 +43,11 @@
   <tr>
     <td align="center"><table border="0" cellspacing="0" cellpadding="0" width="641px">
       <tr align="center" valign="middle">
-        <td id="consept" valign="middle"><a href="index.htm" tppabs="concept/"><span>е│еєе╗е╫е╚</span></a></td>
-        <td id="mode"><a href="../mode/index.htm" tppabs="mode/"><span>етб╝е╔╛╥▓Ё</span></a></td>
-        <td id="misson"><a href="../mission/index.htm" tppabs="mission/"><span>е▀е├е╖ечеє</span></a></td>
-        <td id="machine"><a href="../machine/index.htm" tppabs="machine/"><span>е▐е╖б╝еє</span></a></td>
-        <td id="charactor"><a href="../character/index.htm" tppabs="character/"><span>енеуещепе┐б╝</span></a></td>
+        <td id="consept" valign="middle"><a href="index.htm" tppabs="concept/"><span>уВ│уГ│уВ╗уГЧуГИ</span></a></td>
+        <td id="mode"><a href="../mode/index.htm" tppabs="mode/"><span>уГвуГ╝уГЙч┤╣ф╗Л</span></a></td>
+        <td id="misson"><a href="../mission/index.htm" tppabs="mission/"><span>уГЯуГГуВ╖уГзуГ│</span></a></td>
+        <td id="machine"><a href="../machine/index.htm" tppabs="machine/"><span>уГЮуВ╖уГ╝уГ│</span></a></td>
+        <td id="charactor"><a href="../character/index.htm" tppabs="character/"><span>уВнуГгуГйуВпуВ┐уГ╝</span></a></td>
       </tr>
     </table></td>
   </tr>
@@ -62,7 +62,7 @@
                     <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="30" /></td>
                   </tr>
                   <tr>
-                    <td><img src="img/title.gif" tppabs="concept/img/title.gif" alt="CONCEPT е│еєе╗е╫е╚" width="701" height="31" /></td>
+                    <td><img src="img/title.gif" tppabs="concept/img/title.gif" alt="CONCEPT уВ│уГ│уВ╗уГЧуГИ" width="701" height="31" /></td>
                   </tr>
                   <tr>
                     <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -70,9 +70,9 @@
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_a">
                         <tr>
-                          <td><p class="para">╣н┬чд╩е▐е├е╫дЄ╜─▓г╠╡┐╘бж╝л═│╦█╩№д╦┴Ўдъ▓єдъбв<br />
-              ┴╓▓ў│юд─е╣еъеъеєе░д╩елб╝евепе╖ечеєдЄ│┌д╖дсды┐╖┤╢│╨е╔ещеде╙еєе░евепе╖ечеєе▓б╝ердм╦■дЄ╗¤д╖д╞┼╨╛ьбк<br />
-              б╓╖шд▐д├д┐е│б╝е╣б╫дмд╩ддд╬д╟бв╔с─╠д╟д╧╣═дидщдьд╩дддшджд╩е╖ечб╝е╚еле├е╚дфбв╬в╞╗дЄ├╡║ўд╖д┐дъд╩д╔бве╫еьедефб╝╝б┬шд╟╝л═│╝л║▀д╦е╔ещеде╓дм│┌д╖дсд▐д╣бг</p></td>
+                          <td><p class="para">х║ГхдзуБкуГЮуГГуГЧуВТч╕жцикчДбх░╜уГ╗шЗкчФ▒хеФцФ╛уБлш╡░уВКхЫЮуВКуАБ<br />
+              чИ╜х┐лф╕ФуБдуВ╣уГкуГкуГ│уВ░уБкуВлуГ╝уВвуВпуВ╖уГзуГ│уВТце╜уБЧуВБуВЛцЦ░цДЯшжЪуГЙуГйуВдуГУуГ│уВ░уВвуВпуВ╖уГзуГ│уВ▓уГ╝уГауБМц║АуВТцМБуБЧуБжчЩ╗ха┤я╝Б<br />
+              уАМц▒║уБ╛уБгуБЯуВ│уГ╝уВ╣уАНуБМуБкуБДуБоуБзуАБцЩощАЪуБзуБпшАГуБИуВЙуВМуБкуБДуВИуБЖуБкуВ╖уГзуГ╝уГИуВлуГГуГИуВДуАБшгПщБУуВТцОвч┤вуБЧуБЯуВКуБкуБйуАБуГЧуГмуВдуГдуГ╝цмбчммуБзшЗкчФ▒шЗкхЬиуБлуГЙуГйуВдуГЦуБМце╜уБЧуВБуБ╛уБЩуАВ</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -94,8 +94,8 @@
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                         <tr>
-                          <td><p class="para">д╡дщд╦бв40╝я╬рдЄ─╢дидые▀е├е╖ечеєд╚бв<br />
-              ┬ч║юRPG┤щ╔щд▒д╬е▄еъехб╝ербїепекеъе╞егд╬ерб╝е╙б╝дм┐едъ└од╣е╣е╚б╝еъб╝дЄ╝¤╧┐бк</p></td>
+                          <td><p class="para">уБХуВЙуБлуАБ40чиощбЮуВТш╢ЕуБИуВЛуГЯуГГуВ╖уГзуГ│уБиуАБ<br />
+              хдзф╜ЬRPGщбФш▓ауБСуБоуГЬуГкуГеуГ╝уГая╝ЖуВпуВкуГкуГЖуВгуБоуГауГ╝уГУуГ╝уБМч╣ФуВКцИРуБЩуВ╣уГИуГ╝уГкуГ╝уВТхПОщМ▓я╝Б</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -117,8 +117,8 @@
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                         <tr>
-                          <td><p class="para">              ▒╟▓шд╬евепе╖ечеєе┴езеде╣е╖б╝еєд╡д╩дмдщд╬е╖е┴ехеиб╝е╖ечеєдм╖лдъ╣нд▓дщдьд▐д╣бг<br />
-              елб╝е▓б╝ерд╚дддж╧╚дЄд╧дыдлд╦▒█дид┐б╓╩к╕ьб╫дЄ╦┬до╜╨д╣┐╖┤╢│╨е╔ещеде╓е▓б╝ерд╬├┬└╕д╟д╣бг</p></td>
+                          <td><p class="para">              цШачФ╗уБоуВвуВпуВ╖уГзуГ│уГБуВзуВдуВ╣уВ╖уГ╝уГ│уБХуБкуБМуВЙуБоуВ╖уГБуГеуВиуГ╝уВ╖уГзуГ│уБМч╣░уВКх║ГуБТуВЙуВМуБ╛уБЩуАВ<br />
+              уВлуГ╝уВ▓уГ╝уГауБиуБДуБЖцЮауВТуБпуВЛуБЛуБлш╢КуБИуБЯуАМчЙйшкЮуАНуВТч┤буБОхЗ║уБЩцЦ░цДЯшжЪуГЙуГйуВдуГЦуВ▓уГ╝уГауБошкХчФЯуБзуБЩуАВ</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -138,13 +138,13 @@
                     <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
                   </tr>
                   <tr>
-                    <td><img src="img/label.gif" tppabs="concept/img/label.gif" alt="еяб╝еые╔е▐е├е╫" width="187" height="63" /></td>
+                    <td><img src="img/label.gif" tppabs="concept/img/label.gif" alt="уГпуГ╝уГлуГЙуГЮуГГуГЧ" width="187" height="63" /></td>
                   </tr>
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                         <tr>
-                          <td><p class="para">е▓б╝ерд╬╔ё┬цд╚д╩дыб╓е╫еъеше╖е╞егб╫д╧бв╞ю╦╠╠є8kmбв<br />
-              ┼ь└╛╠є9kmд╬╣н┬чд╩е▐е├е╫д╟╣╜└од╡дьбв ══б╣д╩┤щдЄдвдяд╗дтд├д╞ддд▐д╣бг</p></td>
+                          <td><p class="para">уВ▓уГ╝уГауБошИЮхП░уБиуБкуВЛуАМуГЧуГкуГиуВ╖уГЖуВгуАНуБпуАБхНЧхМЧч┤Д8kmуАБ<br />
+              цЭ▒ше┐ч┤Д9kmуБох║ГхдзуБкуГЮуГГуГЧуБзцзЛцИРуБХуВМуАБ цзШуАЕуБкщбФуВТуБВуВПуБЫуВВуБгуБжуБДуБ╛уБЩуАВ</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -182,7 +182,7 @@
                     <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
                   </tr>
                   <tr>
-                    <td class="c"><p class="para">е╣е╞б╝е╕д╬├цд╦д╧бве╣е╚б╝еъб╝╜°╚╫д╟д╧╣╘дпд│д╚д╬╜╨═шд╩ддеиеъевдтбк</p></td>
+                    <td class="c"><p class="para">уВ╣уГЖуГ╝уВ╕уБоф╕нуБлуБпуАБуВ╣уГИуГ╝уГкуГ╝х║ПчЫдуБзуБпшбМуБПуБУуБиуБохЗ║цЭеуБкуБДуВиуГкуВвуВВя╝Б</p></td>
                   </tr>
                   <tr>
                     <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -190,8 +190,8 @@
                   <tr>
                     <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                         <tr>
-                          <td><a href="../index.htm" tppabs="">д│д╬е╡еде╚д╬└ш╞мд╦╠сды</a></td>
-                          <td class="r"><a href="#">д│д╬е┌б╝е╕д╬└ш╞мд╦╠сды</a></td>
+                          <td><a href="../index.htm" tppabs="">уБУуБоуВ╡уВдуГИуБохЕИщануБлцИ╗уВЛ</a></td>
+                          <td class="r"><a href="#">уБУуБоуГЪуГ╝уВ╕уБохЕИщануБлцИ╗уВЛ</a></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -202,7 +202,7 @@
               </tr>
             </table>
 		</div>
-<!--е╒е├е┐б╝╞╔д▀╣■д▀д│д│длдщ-->
+<!--уГХуГГуВ┐уГ╝шкнуБ┐ш╛╝уБ┐уБУуБУуБЛуВЙ-->
 <script src="../../../../../www.bandainamcogames.co.jp/common/include/products/euc/white/footer01.js" tppabs="http://www.bandainamcogames.co.jp/common/include/products/euc/white/footer01.js" type="text/javascript" language="JavaScript"></script>
-<!--е╒е├е┐б╝╞╔д▀╣■д▀д│д│д▐д╟-->
+<!--уГХуГГуВ┐уГ╝шкнуБ┐ш╛╝уБ┐уБУуБУуБ╛уБз-->
 </html>
