--- a/index.php.htm
+++ b/index.php.htm
@@ -1,16 +1,16 @@
 <!DOCTYPE html 
      PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRITICAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег</title>
-<meta http-equiv="content-type" content="text/html; charset=euc-jp" />
-<meta http-equiv="content-language" content="ja" />
+<title>CRITICAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="content-language" content="zh" />
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег" />
-<meta name="keywords" content="CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег" />
+<meta name="description" content="CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" />
+<meta name="keywords" content="CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -31,7 +31,7 @@
       <td><table border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td><img src="common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" width="55" height="1" /></td>
-          <td><img src="common/img/top/top_logo.jpg" tppabs="common/img/top/top_logo.jpg" alt="CRITICAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег" width="651" height="107" /></td>
+          <td><img src="common/img/top/top_logo.jpg" tppabs="common/img/top/top_logo.jpg" alt="CRITICAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" width="651" height="107" /></td>
         </tr>
       </table></td>
     </tr>
@@ -39,7 +39,7 @@
       <td><img src="common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" width="1" height="208" /></td>
     </tr>
     <tr>
-      <td align="left"><img src="common/img/top/top_lead.jpg" tppabs="common/img/top/top_lead.jpg" width="583" height="153" alt="╬°дте╔ещеде╓дт┴┤╬╧╝└┴Ўбк╣н┬чд╩е▐е├е╫д╟╖лдъ╣нд▓дыбв┴╓▓ўбж┐╖┤╢│╨е╔ещеде╙еєе░евепе╖ечеєбк" /></td>
+      <td align="left"><img src="common/img/top/top_lead.jpg" tppabs="common/img/top/top_lead.jpg" width="583" height="153" alt="цБЛуВВуГЙуГйуВдуГЦуВВхЕихКЫчЦ╛ш╡░я╝Бх║ГхдзуБкуГЮуГГуГЧуБзч╣░уВКх║ГуБТуВЛуАБчИ╜х┐луГ╗цЦ░цДЯшжЪуГЙуГйуВдуГУуГ│уВ░уВвуВпуВ╖уГзуГ│я╝Б" /></td>
     </tr>
   </table>
 </div>
@@ -47,17 +47,17 @@
   <tr>
     <td align="center"><table border="0" cellspacing="0" cellpadding="0" width="641px">
       <tr align="center" valign="middle">
-        <td id="consept" valign="middle"><a href="concept/index.htm" tppabs="concept/"><span>е│еєе╗е╫е╚</span></a></td>
-        <td id="mode"><a href="mode/index.htm" tppabs="mode/"><span>етб╝е╔╛╥▓Ё</span></a></td>
-        <td id="misson"><a href="mission/index.htm" tppabs="mission/"><span>е▀е├е╖ечеє</span></a></td>
-        <td id="machine"><a href="machine/index.htm" tppabs="machine/"><span>е▐е╖б╝еє</span></a></td>
-        <td id="charactor"><a href="character/index.htm" tppabs="character/"><span>енеуещепе┐б╝</span></a></td>
+        <td id="consept" valign="middle"><a href="concept/index.htm" tppabs="concept/"><span>уВ│уГ│уВ╗уГЧуГИ</span></a></td>
+        <td id="mode"><a href="mode/index.htm" tppabs="mode/"><span>уГвуГ╝уГЙч┤╣ф╗Л</span></a></td>
+        <td id="misson"><a href="mission/index.htm" tppabs="mission/"><span>уГЯуГГуВ╖уГзуГ│</span></a></td>
+        <td id="machine"><a href="machine/index.htm" tppabs="machine/"><span>уГЮуВ╖уГ╝уГ│</span></a></td>
+        <td id="charactor"><a href="character/index.htm" tppabs="character/"><span>уВнуГгуГйуВпуВ┐уГ╝</span></a></td>
       </tr>
     </table></td>
   </tr>
 </table>
 </div>
-<div id="banner"><a href="comment/index.htm" tppabs="comment/" onmouseover="MM_swapImage('BANNER','','common/img/top/banner_f.jpg'/*tpa=common/img/top/banner_f.jpg*/,1)" onmouseout="MM_swapImgRestore()"><img src="common/img/top/banner.jpg" tppabs="common/img/top/banner.jpg" alt="╣ы▓┌└╝═е┐╪е▓б╝ер╛╥▓Ёе│есеєе╚&and;TVCM" name="BANNER" width="574" height="207" border="0" id="BANNER" /></a></div>
+<div id="banner"><a href="comment/index.htm" tppabs="comment/" onmouseover="MM_swapImage('BANNER','','common/img/top/banner_f.jpg'/*tpa=common/img/top/banner_f.jpg*/,1)" onmouseout="MM_swapImgRestore()"><img src="common/img/top/banner.jpg" tppabs="common/img/top/banner.jpg" alt="ш▒кшПпхг░хДкщЩгуВ▓уГ╝уГач┤╣ф╗ЛуВ│уГбуГ│уГИ&and;TVCM" name="BANNER" width="574" height="207" border="0" id="BANNER" /></a></div>
 <div id="speck" >
   <table width="100%" border="0" cellpadding="0" cellspacing="0">
     <tr>
@@ -66,17 +66,17 @@
           <td align="center"><img src="common/img/top/pac.gif" tppabs="common/img/top/pac.gif" width="71" height="100" class="topm" /></td>
           <td align="center"><table border="0" cellspacing="0" cellpadding="0" id="spec">
               <tr>
-                <td align="center">╚п╟ф╞№</td>
-                <td align="left">бз</td>
+                <td align="center">чЩ║хг▓цЧе</td>
+                <td align="left">я╝Ъ</td>
                 <td rowspan="3" align="left" valign="bottom"><img src="img/img_cero/12.gif" tppabs="img/img_cero/12.gif" alt="CERO 12" width="37" height="45" class="topm" /></td>
               </tr>
               <tr>
-                <td align="center" nowrap="nowrap">есб╝елб╝┤ї╦╛╛о╟ф▓┴│╩</td>
-                <td align="left">бз</td>
+                <td align="center" nowrap="nowrap">уГбуГ╝уВлуГ╝х╕МцЬЫх░Пхг▓ф╛бца╝</td>
+                <td align="left">я╝Ъ</td>
                 </tr>
               <tr>
-                <td align="center">е╕еуеєеы</td>
-                <td align="left">бзе╔ещеде╙еєе░евепе╖ечеє</td>
+                <td align="center">уВ╕уГгуГ│уГл</td>
+                <td align="left">я╝ЪуГЙуГйуВдуГУуГ│уВ░уВвуВпуВ╖уГзуГ│</td>
                 </tr>
           </table></td>
         </tr>
@@ -93,8 +93,8 @@
 </div>
 </div>
 </div>
-<!--е╒е├е┐б╝╞╔д▀╣■д▀д│д│длдщ-->
+<!--уГХуГГуВ┐уГ╝шкнуБ┐ш╛╝уБ┐уБУуБУуБЛуВЙ-->
 <script src="../../../../www.bandainamcogames.co.jp/common/include/products/euc/white/footer01.js" tppabs="http://www.bandainamcogames.co.jp/common/include/products/euc/white/footer01.js" type="text/javascript" language="JavaScript"></script>
-<!--е╒е├е┐б╝╞╔д▀╣■д▀д│д│д▐д╟-->
+<!--уГХуГГуВ┐уГ╝шкнуБ┐ш╛╝уБ┐уБУуБУуБ╛уБз-->
 </body>
 </html>
