--- a/machine/hiddenmachine.php.htm
+++ b/machine/hiddenmachine.php.htm
@@ -2,18 +2,18 @@
 <!DOCTYPE html 
      PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег | е▐е╖еє╛╥▓Ё</title>
+<title>CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг | уГЮуВ╖уГ│ч┤╣ф╗Л</title>
 
 
-<meta http-equiv="content-type" content="text/html; charset=euc-jp" />
-<meta http-equiv="content-language" content="ja" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="content-language" content="zh" />
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег" />
-<meta name="keywords" content="CRTITCAL VELOCITY епеъе╞егелеые┘еэе╖е╞ег" />
+<meta name="description" content="CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" />
+<meta name="keywords" content="CRTITCAL VELOCITY уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -33,7 +33,7 @@
 		<div id="mainContent">
 		  <table border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td align="center"><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH епеъе╞егелеые┘еэе╖е╞ег" width="760" height="100" border="0" /></a></td>
+              <td align="center"><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH уВпуГкуГЖуВгуВлуГлуГЩуГнуВ╖уГЖуВг" width="760" height="100" border="0" /></a></td>
             </tr>
             <tr>
               <td align="center"><div id="navigation">
@@ -41,11 +41,11 @@
   <tr>
     <td align="center"><table border="0" cellspacing="0" cellpadding="0" width="641px">
       <tr align="center" valign="middle">
-        <td id="consept" valign="middle"><a href="../concept/index.htm" tppabs="concept/"><span>е│еєе╗е╫е╚</span></a></td>
-        <td id="mode"><a href="../mode/index.htm" tppabs="mode/"><span>етб╝е╔╛╥▓Ё</span></a></td>
-        <td id="misson"><a href="../mission/index.htm" tppabs="mission/"><span>е▀е├е╖ечеє</span></a></td>
-        <td id="machine"><a href="index.htm" tppabs="machine/"><span>е▐е╖б╝еє</span></a></td>
-        <td id="charactor"><a href="../character/index.htm" tppabs="character/"><span>енеуещепе┐б╝</span></a></td>
+        <td id="consept" valign="middle"><a href="../concept/index.htm" tppabs="concept/"><span>уВ│уГ│уВ╗уГЧуГИ</span></a></td>
+        <td id="mode"><a href="../mode/index.htm" tppabs="mode/"><span>уГвуГ╝уГЙч┤╣ф╗Л</span></a></td>
+        <td id="misson"><a href="../mission/index.htm" tppabs="mission/"><span>уГЯуГГуВ╖уГзуГ│</span></a></td>
+        <td id="machine"><a href="index.htm" tppabs="machine/"><span>уГЮуВ╖уГ╝уГ│</span></a></td>
+        <td id="charactor"><a href="../character/index.htm" tppabs="character/"><span>уВнуГгуГйуВпуВ┐уГ╝</span></a></td>
       </tr>
     </table></td>
   </tr>
@@ -58,7 +58,7 @@
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="30" /></td>
 			      </tr>
 				  <tr>
-				    <td><img src="img/title.gif" tppabs="machine/img/title.gif" alt="MACHINE е▐е╖еє╛╥▓Ё" width="700" height="31" /></td>
+				    <td><img src="img/title.gif" tppabs="machine/img/title.gif" alt="MACHINE уГЮуВ╖уГ│ч┤╣ф╗Л" width="700" height="31" /></td>
 			      </tr>
 				  <tr>
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -66,8 +66,8 @@
 				  <tr>
 				    <td><table border="0" cellspacing="0" cellpadding="0">
                       <tr>
-                        <td><a href="index.php.htm" tppabs="machine/index.php" onmouseover="MM_swapImage('TOP','','img/lnavi01_f.jpg'/*tpa=machine/img/lnavi01_f.jpg*/,1)" onmouseout="MM_swapImgRestore()"><img src="img/lnavi01.jpg" tppabs="machine/img/lnavi01.jpg" alt="е▐е╖еєTOP" name="TOP" width="130" height="33" border="0" id="TOP" /></a></td>
-                        <td><img src="img/lnavi02_f.jpg" tppabs="machine/img/lnavi02_f.jpg" alt="▒гд╖е▐е╖еє" name="HIDDEN" width="130" height="33" border="0" id="HIDDEN" /></td>
+                        <td><a href="index.php.htm" tppabs="machine/index.php" onmouseover="MM_swapImage('TOP','','img/lnavi01_f.jpg'/*tpa=machine/img/lnavi01_f.jpg*/,1)" onmouseout="MM_swapImgRestore()"><img src="img/lnavi01.jpg" tppabs="machine/img/lnavi01.jpg" alt="уГЮуВ╖уГ│TOP" name="TOP" width="130" height="33" border="0" id="TOP" /></a></td>
+                        <td><img src="img/lnavi02_f.jpg" tppabs="machine/img/lnavi02_f.jpg" alt="щЪауБЧуГЮуВ╖уГ│" name="HIDDEN" width="130" height="33" border="0" id="HIDDEN" /></td>
                       </tr>
                     </table></td>
       </tr>
@@ -75,13 +75,13 @@
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
 			      </tr>
 				  <tr>
-				    <td><img src="img/hidden/lead01.gif" tppabs="machine/img/hidden/lead01.gif" alt="▒гд╖е▐е╖еє" width="205" height="66" /></td>
+				    <td><img src="img/hidden/lead01.gif" tppabs="machine/img/hidden/lead01.gif" alt="щЪауБЧуГЮуВ╖уГ│" width="205" height="66" /></td>
 			      </tr>
 				  <tr>
 				    <td>&nbsp;</td>
       </tr>
 				  <tr>
-				    <td><p class="para">б╪епеъе╞егелеы е┘еэе╖е╞егб┘д╦д╧е╩ере│д╩дщд╟д╧д╬▒гд╖е▐е╖еєдм┼╨╛ьд╖д▐д╣бг<br />
+				    <td><p class="para">уАОуВпуГкуГЖуВгуВлуГл уГЩуГнуВ╖уГЖуВгуАПуБлуБпуГКуГауВ│уБкуВЙуБзуБпуБощЪауБЧуГЮуВ╖уГ│уБМчЩ╗ха┤уБЧуБ╛уБЩуАВ<br />
 				    </p></td>
       </tr>
 				  <tr>
@@ -95,9 +95,9 @@
                         <td><img src="img/hidden/img03.jpg" tppabs="machine/img/hidden/img03.jpg" width="230" height="161" /></td>
                       </tr>
                       <tr align="center">
-                        <td><p class="para">епеъе╩б╝еьV</p></td>
-                        <td><p class="para">е╤е├епе▐еєелб╝</p></td>
-                        <td><p class="para">е╔еще├е░елб╝</p></td>
+                        <td><p class="para">уВпуГкуГКуГ╝уГмV</p></td>
+                        <td><p class="para">уГСуГГуВпуГЮуГ│уВлуГ╝</p></td>
+                        <td><p class="para">уГЙуГйуГГуВ░уВлуГ╝</p></td>
                       </tr>
                     </table></td>
 			      </tr>
@@ -107,8 +107,8 @@
 				  <tr>
 				    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td><a href="../index.htm" tppabs="">д│д╬е╡еде╚д╬└ш╞мд╦╠сды</a></td>
-                        <td class="r"><a href="hiddenmachine.php.htm" tppabs="machine/hiddenmachine.php">д│д╬е┌б╝е╕д╬└ш╞мд╦╠сды</a></td>
+                        <td><a href="../index.htm" tppabs="">уБУуБоуВ╡уВдуГИуБохЕИщануБлцИ╗уВЛ</a></td>
+                        <td class="r"><a href="hiddenmachine.php.htm" tppabs="machine/hiddenmachine.php">уБУуБоуГЪуГ╝уВ╕уБохЕИщануБлцИ╗уВЛ</a></td>
                       </tr>
                     </table></td>
 			      </tr>
@@ -117,7 +117,7 @@
 				  </tr>
 		  </table>
   </div>
-<!--е╒е├е┐б╝╞╔д▀╣■д▀д│д│длдщ-->
+<!--уГХуГГуВ┐уГ╝шкнуБ┐ш╛╝уБ┐уБУуБУуБЛуВЙ-->
 <script src="../../../../../www.bandainamcogames.co.jp/common/include/products/euc/white/footer01.js" tppabs="http://www.bandainamcogames.co.jp/common/include/products/euc/white/footer01.js" type="text/javascript" language="JavaScript"></script>
-<!--е╒е├е┐б╝╞╔д▀╣■д▀д│д│д▐д╟-->
+<!--уГХуГГуВ┐уГ╝шкнуБ┐ш╛╝уБ┐уБУуБУуБ╛уБз-->
 </html>
