--- a/comment/index.htm
+++ b/comment/index.htm
@@ -3,7 +3,7 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY クリティカルベロシティ | モード</title>
+<title>CRTITCAL VELOCITY 致命极速 | 游戏模式</title>
 
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -11,8 +11,8 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY クリティカルベロシティ" />
-<meta name="keywords" content="CRTITCAL VELOCITY クリティカルベロシティ" />
+<meta name="description" content="CRTITCAL VELOCITY 致命极速" />
+<meta name="keywords" content="CRTITCAL VELOCITY 致命极速" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -29,7 +29,7 @@
             <tr>
               <td><table border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH クリティカルベロシティ" width="760" height="100" border="0" /></a></td>
+                  <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH 致命极速" width="760" height="100" border="0" /></a></td>
                 </tr>
                 <tr>
                   <td><div id="navigation" align="center">
@@ -70,9 +70,9 @@
                 <tr>
                   <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_a">
                       <tr>
-                        <td><p class="para">PS2『クリティカル ベロシティ』の魅力のひとつは、豪華声優陣の出演です。<br />
-トータル80分を超える映画さながらのストーリームービーでの出演はもちろん、ミッション中も掛け声などが飛び交い、迫力あるミッションをさらに盛り上げてくれています。<br />
-そこで！ このページでは豪華声優陣それぞれのキャラクターの声によるゲーム紹介コメントをストリーミング配信中です。是非、お楽しみください。<br />
+                        <td><p class="para">PS2『致命极速』的魅力之一、豪华声优阵容的出演。<br />
+                            除了在长达80多分钟的电影般的故事情节中出现外，在任务期间还会出现呼喊声等，让充满魄力的任务更加精彩。<br />
+                            因此！在本页中，豪华声优阵容将根据各自角色的声音进行游戏介绍。请尽情享受。<br />
                         </p></td>
                       </tr>
                   </table></td>
@@ -132,9 +132,9 @@
                       <tr>
                         <td><table border="0" cellspacing="0" cellpadding="0">
                             <tr>
-                              <td><p class="para">PS2『クリティカル ベロシティ』のテレビCMです。<br />
-  ゲーム本編同様、迫力満点の内容となっています。<br />
-  是非ご覧下さい。</p></td>
+                              <td><p class="para">PS2『致命极速』的电视广告。<br />
+                                  和游戏本篇一样，内容十分扣人心弦。<br />
+                                  请务必欣赏。</p></td>
                             </tr>
                             <tr>
                               <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -153,11 +153,11 @@
                 <tr>
                   <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b" width="660">
                     <tr>
-                      <td><p class="para">※必ずお読み下さい・・・「映像・音楽データ」のご利用について<br />
+                      <td><p class="para">※请务必阅读・・・关于「视频・音乐数据」的使用<br />
                           <br />
-                          これらの映像・音楽ファイルは、個人で楽しんでいただくために提供しております。<br />
-                          したがって、その目的以外にご利用いただくことはできませんのでご了承ください。<br />
-                      なお、権利関係については、「<a href="javascript:if(confirm('https://www.bandainamcoent.co.jp/info/  \n\n乎猟周涙隈喘 Teleport Ultra 和墮, 咀葎 万頁匯倖囃賜揃抄翌何瓜譜崔葎万議尼兵仇峽議仇峽。  \n\n低?壓捲暦匂貧嬉蝕万?'))window.location='https://www.bandainamcoent.co.jp/info/'" tppabs="https://www.bandainamcoent.co.jp/info/">権利に関するご注意</a>」をご覧ください。</p></td>
+                          这些视频和音乐文件供个人欣赏。<br />
+                          因此，请注意它不能用于任何其他用途。<br />
+                          请参阅、「<a href="https://www.bandainamcoent.co.jp/info/">注意事项</a>」了解详情。</p></td>
                     </tr>
                   </table></td>
                 </tr>
@@ -167,8 +167,8 @@
                 <tr>
                   <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td><a href="../index.htm" tppabs="">このサイトの先頭に戻る</a></td>
-                        <td class="r"><a href="index.htm" tppabs="comment/">このページの先頭に戻る</a></td>
+                        <td><a href="../index.htm" tppabs="">返回本站首页</a></td>
+                        <td class="r"><a href="index.htm" tppabs="comment/">返回本页顶部</a></td>
                       </tr>
                   </table></td>
                 </tr>
