--- a/mission/index.htm
+++ b/mission/index.htm
@@ -4,7 +4,7 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY クリティカルベロシティ | ミッション</title>
+<title>CRTITCAL VELOCITY 致命极速 | 任务</title>
 
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -12,8 +12,8 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY クリティカルベロシティ" />
-<meta name="keywords" content="CRTITCAL VELOCITY クリティカルベロシティ" />
+<meta name="description" content="CRTITCAL VELOCITY 致命极速" />
+<meta name="keywords" content="CRTITCAL VELOCITY 致命极速" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -36,7 +36,7 @@
             <tr>
               <td><table border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH クリティカルベロシティ" width="760" height="100" border="0" /></a></td>
+                  <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH 致命极速" width="760" height="100" border="0" /></a></td>
                 </tr>
                 <tr>
                   <td><div id="navigation" align="center">
@@ -69,9 +69,9 @@
                   <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
                 </tr>
                 <tr>
-                  <td><p class="para">本作のメインモードである「シナリオモード」には、ストーリーに沿って進める「ストーリーミッション」と、純粋にポイント稼ぎ、報酬稼ぎなどを行う「フリーミッション」の2種類が収録されています。<br />
-                    ここではそれぞれのミッションの一部を紹介します。<br />
-                  「ストーリーミッション」の合間に流れるイベントシーンにも注目してください。</p></td>
+                  <td><p class="para">在本作的主要模式「剧本模式」中，收录了沿着故事进行的「故事任务」和纯粹得分获得报酬等的「自由任务」两种。<br />
+                      以下是每个任务的一些内容。<br />
+                      请注意「故事任务」中播放的事件场景。</p></td>
                 </tr>
                 <tr>
                   <td>&nbsp;</td>
@@ -340,8 +340,8 @@
                 <tr>
                   <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td><a href="../index.htm" tppabs="">このサイトの先頭に戻る</a></td>
-                        <td class="r"><a href="#">このページの先頭に戻る</a></td>
+                        <td><a href="../index.htm" tppabs="">返回本站首页</a></td>
+                        <td class="r"><a href="#">返回本页顶部</a></td>
                       </tr>
                   </table></td>
                 </tr>
