--- a/concept/index.htm
+++ b/concept/index.htm
@@ -4,7 +4,7 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY クリティカルベロシティ | コンセプト</title>
+<title>CRTITCAL VELOCITY 致命极速 | 概念</title>
 
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -12,8 +12,8 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY クリティカルベロシティ" />
-<meta name="keywords" content="CRTITCAL VELOCITY クリティカルベロシティ" />
+<meta name="description" content="CRTITCAL VELOCITY 致命极速" />
+<meta name="keywords" content="CRTITCAL VELOCITY 致命极速" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -35,7 +35,7 @@
               <tr>
                 <td><table border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH クリティカルベロシティ" width="760" height="100" border="0" /></a></td>
+                    <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH 致命极速" width="760" height="100" border="0" /></a></td>
                   </tr>
                   <tr>
                     <td class="c"><div id="navigation" align="center">
@@ -70,9 +70,9 @@
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_a">
                         <tr>
-                          <td><p class="para">広大なマップを縦横無尽・自由奔放に走り回り、<br />
-              爽快且つスリリングなカーアクションを楽しめる新感覚ドライビングアクションゲームが満を持して登場！<br />
-              「決まったコース」がないので、普通では考えられないようなショートカットや、裏道を探索したりなど、プレイヤー次第で自由自在にドライブが楽しめます。</p></td>
+                          <td><p class="para">在广阔的地图上纵横驰骋、自由奔放地奔跑、<br />
+                              一款令人振奋和惊心动魄的全新汽车动作驾驶动作游戏，现已推出!<br />
+              因为没有「固定的路线」，所以可以根据自身喜好自由享受驾驶乐趣、例如您通常想不到的捷径或探索小路等。</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -94,8 +94,8 @@
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                         <tr>
-                          <td><p class="para">さらに、40種類を超えるミッションと、<br />
-              大作RPG顔負けのボリューム＆クオリティのムービーが織り成すストーリーを収録！</p></td>
+                          <td><p class="para">此外，还有超过40种不同的任务、<br />
+                              以及不亚于大型RPG立体感和品质的影片所编织的故事！</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -117,8 +117,8 @@
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                         <tr>
-                          <td><p class="para">              映画のアクションチェイスシーンさながらのシチュエーションが繰り広げられます。<br />
-              カーゲームという枠をはるかに越えた「物語」を紡ぎ出す新感覚ドライブゲームの誕生です。</p></td>
+                          <td><p class="para">              就像电影中的动作追逐场面一样。<br />
+                              这是一种新型驾驶游戏的诞生，它所编织的「故事」远远超出了汽车游戏的框架。</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -143,8 +143,8 @@
                   <tr>
                     <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                         <tr>
-                          <td><p class="para">ゲームの舞台となる「プリヨシティ」は、南北約8km、<br />
-              東西約9kmの広大なマップで構成され、 様々な顔をあわせもっています。</p></td>
+                          <td><p class="para">游戏发生在「プリヨシティ」，这是一张南北长约8公里、<br />
+                              东西宽约9公里的广阔地图，拥有各种面貌。</p></td>
                         </tr>
                     </table></td>
                   </tr>
@@ -182,7 +182,7 @@
                     <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
                   </tr>
                   <tr>
-                    <td class="c"><p class="para">ステージの中には、ストーリー序盤では行くことの出来ないエリアも！</p></td>
+                    <td class="c"><p class="para">在故事刚开始时，地图上有一些你去不了的地方！</p></td>
                   </tr>
                   <tr>
                     <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -190,8 +190,8 @@
                   <tr>
                     <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                         <tr>
-                          <td><a href="../index.htm" tppabs="">このサイトの先頭に戻る</a></td>
-                          <td class="r"><a href="#">このページの先頭に戻る</a></td>
+                          <td><a href="../index.htm" tppabs="">返回本站首页</a></td>
+                          <td class="r"><a href="#">返回本页顶部</a></td>
                         </tr>
                     </table></td>
                   </tr>
