--- a/index.php.htm
+++ b/index.php.htm
@@ -3,14 +3,14 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRITICAL VELOCITY クリティカルベロシティ</title>
+<title>CRITICAL VELOCITY 致命极速</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="content-language" content="zh" />
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY クリティカルベロシティ" />
-<meta name="keywords" content="CRTITCAL VELOCITY クリティカルベロシティ" />
+<meta name="description" content="CRTITCAL VELOCITY 致命极速" />
+<meta name="keywords" content="CRTITCAL VELOCITY 致命极速" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -31,7 +31,7 @@
       <td><table border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td><img src="common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" width="55" height="1" /></td>
-          <td><img src="common/img/top/top_logo.jpg" tppabs="common/img/top/top_logo.jpg" alt="CRITICAL VELOCITY クリティカルベロシティ" width="651" height="107" /></td>
+          <td><img src="common/img/top/top_logo.jpg" tppabs="common/img/top/top_logo.jpg" alt="CRITICAL VELOCITY 致命极速" width="651" height="107" /></td>
         </tr>
       </table></td>
     </tr>
@@ -66,17 +66,17 @@
           <td align="center"><img src="common/img/top/pac.gif" tppabs="common/img/top/pac.gif" width="71" height="100" class="topm" /></td>
           <td align="center"><table border="0" cellspacing="0" cellpadding="0" id="spec">
               <tr>
-                <td align="center">発売日</td>
+                <td align="center">发售日</td>
                 <td align="left">：</td>
                 <td rowspan="3" align="left" valign="bottom"><img src="img/img_cero/12.gif" tppabs="img/img_cero/12.gif" alt="CERO 12" width="37" height="45" class="topm" /></td>
               </tr>
               <tr>
-                <td align="center" nowrap="nowrap">メーカー希望小売価格</td>
+                <td align="center" nowrap="nowrap">开发商建议零售价</td>
                 <td align="left">：</td>
                 </tr>
               <tr>
-                <td align="center">ジャンル</td>
-                <td align="left">：ドライビングアクション</td>
+                <td align="center">游戏类型</td>
+                <td align="left">：驾驶动作</td>
                 </tr>
           </table></td>
         </tr>
