--- a/machine/hiddenmachine.php.htm
+++ b/machine/hiddenmachine.php.htm
@@ -4,7 +4,7 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY クリティカルベロシティ | マシン紹介</title>
+<title>CRTITCAL VELOCITY 致命极速 | 汽车介绍</title>
 
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -12,8 +12,8 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY クリティカルベロシティ" />
-<meta name="keywords" content="CRTITCAL VELOCITY クリティカルベロシティ" />
+<meta name="description" content="CRTITCAL VELOCITY 致命极速" />
+<meta name="keywords" content="CRTITCAL VELOCITY 致命极速" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -33,7 +33,7 @@
 		<div id="mainContent">
 		  <table border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td align="center"><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH クリティカルベロシティ" width="760" height="100" border="0" /></a></td>
+              <td align="center"><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH 致命极速" width="760" height="100" border="0" /></a></td>
             </tr>
             <tr>
               <td align="center"><div id="navigation">
@@ -81,7 +81,7 @@
 				    <td>&nbsp;</td>
       </tr>
 				  <tr>
-				    <td><p class="para">『クリティカル ベロシティ』にはナムコならではの隠しマシンが登場します。<br />
+				    <td><p class="para">南梦宫 独特隐藏车辆将『致命极速』中登场。<br />
 				    </p></td>
       </tr>
 				  <tr>
@@ -107,8 +107,8 @@
 				  <tr>
 				    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td><a href="../index.htm" tppabs="">このサイトの先頭に戻る</a></td>
-                        <td class="r"><a href="hiddenmachine.php.htm" tppabs="machine/hiddenmachine.php">このページの先頭に戻る</a></td>
+                        <td><a href="../index.htm" tppabs="">返回本站首页</a></td>
+                        <td class="r"><a href="hiddenmachine.php.htm" tppabs="machine/hiddenmachine.php">返回本页顶部</a></td>
                       </tr>
                     </table></td>
 			      </tr>
