--- a/machine/index.php.htm
+++ b/machine/index.php.htm
@@ -4,7 +4,7 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY クリティカルベロシティ | マシン紹介</title>
+<title>CRTITCAL VELOCITY 致命极速 | 汽车介绍</title>
 
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -12,8 +12,8 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY クリティカルベロシティ" />
-<meta name="keywords" content="CRTITCAL VELOCITY クリティカルベロシティ" />
+<meta name="description" content="CRTITCAL VELOCITY 致命极速" />
+<meta name="keywords" content="CRTITCAL VELOCITY 致命极速" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -33,7 +33,7 @@
 		<div id="mainContent">
 		  <table border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td align="center"><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH クリティカルベロシティ" width="760" height="100" border="0" /></a></td>
+              <td align="center"><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH 致命极速" width="760" height="100" border="0" /></a></td>
             </tr>
             <tr>
               <td align="center"><div id="navigation">
@@ -77,9 +77,9 @@
 				  <tr>
 				    <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_a">
   <tr>
-<td><p class="para">ゲーム中には、バラエティに富んだマシンが多数登場します。<br />
-  各々のミッションステージに合わせていかにマシンを選択するかがゲームクリアのための重要な要素<br />
-  となってきます。</p></td>
+<td><p class="para">游戏中会出现很多不同的汽车。<br />
+    如何根据每个任务阶段选择汽车<br />
+    是通关游戏的重要因素。</p></td>
     </tr>
 </table>
 </td>
@@ -95,7 +95,7 @@
                         <td valign="bottom"><img src="img/img2.jpg" tppabs="machine/img/img2.jpg" alt="" width="347" height="172" /></td>
                       </tr>
                       <tr>
-                        <td align="center"><p class="para">セダン（L）</p></td>
+                        <td align="center"><p class="para">轿车（L）</p></td>
                         <td>&nbsp;</td>
                         <td align="center"><p class="para">SUV</p></td>
                       </tr>
@@ -112,9 +112,9 @@
                         <td><img src="img/img4.jpg" tppabs="machine/img/img4.jpg" alt="" width="347" height="168" /></td>
                       </tr>
                       <tr>
-                        <td align="center"><p class="para">スポーツ</p></td>
+                        <td align="center"><p class="para">跑车</p></td>
                         <td>&nbsp;</td>
-                        <td align="center"><p class="para">セダン（S）</p></td>
+                        <td align="center"><p class="para">轿车（S）</p></td>
                       </tr>
                     </table></td>
 			      </tr>
@@ -146,9 +146,9 @@
                         <td><img src="img/img14.jpg" tppabs="machine/img/img14.jpg" alt="" width="347" height="160" /></td>
                       </tr>
                       <tr>
-                        <td align="center"><p class="para">スポーツ　G2(L)</p></td>
+                        <td align="center"><p class="para">跑车　G2(L)</p></td>
                         <td>&nbsp;</td>
-                        <td align="center"><p class="para">スーパースポーツ　G2</p></td>
+                        <td align="center"><p class="para">超级跑车　G2</p></td>
                       </tr>
                     </table></td>
       </tr>
@@ -168,10 +168,10 @@
                         <td><img src="img/img24.jpg" tppabs="machine/img/img24.jpg" alt="" width="347" height="171" /></td>
                       </tr>
                       <tr>
-                        <td align="center"><p class="para">セダン　G3（Ｌ）<br />
+                        <td align="center"><p class="para">轿车　G3（Ｌ）<br />
                         </p></td>
                         <td>&nbsp;</td>
-                        <td align="center"><p class="para">サルーン　G3</p></td>
+                        <td align="center"><p class="para">轿车　G3</p></td>
                       </tr>
                     </table></td>
       </tr>
@@ -191,9 +191,9 @@
                         <td><img src="img/img26.jpg" tppabs="machine/img/img26.jpg" alt="" width="347" height="160" /></td>
                       </tr>
                       <tr>
-                        <td align="center"><p class="para">スポーツ　G3（Ｍ）</p></td>
+                        <td align="center"><p class="para">跑车　G3（Ｍ）</p></td>
                         <td>&nbsp;</td>
-                        <td align="center"><p class="para">ホットハッチ　G3</p></td>
+                        <td align="center"><p class="para">热销车型　G3</p></td>
                       </tr>
                     </table></td>
       </tr>
@@ -201,7 +201,7 @@
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
       </tr>
 				  <tr>
-				    <td align="center"><p class="para">マシンはこの他にも多数登場予定！</p></td>
+				    <td align="center"><p class="para">除此之外还有很多其他车辆登场！</p></td>
       </tr>
 				  <tr>
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -226,7 +226,7 @@
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
       </tr>
 				  <tr>
-				    <td align="center"><p class="para">これらは登場するマシンの元になったデザイン画です。</p></td>
+				    <td align="center"><p class="para">这些是将会出现的汽车原始设计图。</p></td>
       </tr>
 				  <tr>
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -240,7 +240,7 @@
 				  <tr>
 				    <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
   <tr>
-    <td><p class="para">各マシンに対応する「カスタマイズパーツ」を装備させることで、車体性能を「カスタマイズ」することが出来ます。</p></td>
+    <td><p class="para">通过配备对应各机器的「定制零件」，可以「定制」车身性能。</p></td>
     </tr>
 </table>
 </td>
@@ -274,8 +274,8 @@
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
 			      </tr>
 				  <tr>
-				    <td class="c"><p class="para">エンジンやブレーキなどの一般的なチューニングから、<br />
-				      本作ならではの攻撃力をアップさせるパーツも装着可能。</p></td>
+				    <td class="c"><p class="para">从引擎和刹车等一般的调整、<br />
+				      本作品特有的提高攻击力的零件也可以安装。</p></td>
 			      </tr>
 				  <tr>
 				    <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -283,8 +283,8 @@
 				  <tr>
 				    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td><a href="../index.htm" tppabs="">このサイトの先頭に戻る</a></td>
-                        <td class="r"><a href="#">このページの先頭に戻る</a></td>
+                        <td><a href="../index.htm" tppabs="">返回本站首页</a></td>
+                        <td class="r"><a href="#">返回本页顶部</a></td>
                       </tr>
                     </table></td>
 			      </tr>
