--- a/mode/index.htm
+++ b/mode/index.htm
@@ -4,7 +4,7 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh" lang="zh">
 <head>
-<title>CRTITCAL VELOCITY クリティカルベロシティ | モード</title>
+<title>CRTITCAL VELOCITY 致命极速 | 游戏模式</title>
 
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -12,8 +12,8 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="CRTITCAL VELOCITY クリティカルベロシティ" />
-<meta name="keywords" content="CRTITCAL VELOCITY クリティカルベロシティ" />
+<meta name="description" content="CRTITCAL VELOCITY 致命极速" />
+<meta name="keywords" content="CRTITCAL VELOCITY 致命极速" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="home" />
 <link title="NAMCO.ch" href="http://namco-ch.net/index.php" rel="bookmark" />
@@ -35,7 +35,7 @@
             <tr>
               <td><table border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH クリティカルベロシティ" width="760" height="100" border="0" /></a></td>
+                  <td><a href="../index.php.htm" tppabs="index.php"><img src="../common/img/gnavi/header.jpg" tppabs="common/img/gnavi/header.jpg" alt="CRITICAL VELOCITYH 致命极速" width="760" height="100" border="0" /></a></td>
                 </tr>
                 <tr>
                   <td><div id="navigation" align="center">
@@ -218,8 +218,8 @@
                 <tr>
                   <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td><a href="../index.htm" tppabs="">このサイトの先頭に戻る</a></td>
-                        <td class="r"><a href="#">このページの先頭に戻る</a></td>
+                        <td><a href="../index.htm" tppabs="">返回本站首页</a></td>
+                        <td class="r"><a href="#">返回本页顶部</a></td>
                       </tr>
                   </table></td>
                 </tr>
