--- a/index.htm
+++ b/index.htm
@@ -81,8 +81,11 @@
           </table></td>
         </tr>
         <tr>
-          <td colspan="2" align="center">&copy;</td>
+          <td colspan="2" align="center">&copy;<br>
+           「<a href="README.html">项目声明 | 请先阅读</a>」</td>
+          <br>
           </tr>
+
         <tr>
           <td></td>
           <td><img src="common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" width="1" height="20" /></td>
