--- a/machine/hiddenmachine.php.htm
+++ b/machine/hiddenmachine.php.htm
@@ -81,7 +81,7 @@
 				    <td>&nbsp;</td>
       </tr>
 				  <tr>
-				    <td><p class="para">南梦宫 独特隐藏车辆将『致命极速』中登场。<br />
+				    <td><p class="para">南梦宫 专属隐藏车辆将在『致命极速』中登场。<br />
 				    </p></td>
       </tr>
 				  <tr>
