--- a/mission/index.htm
+++ b/mission/index.htm
@@ -69,7 +69,7 @@
                   <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
                 </tr>
                 <tr>
-                  <td><p class="para">在本作的主要模式「剧本模式」中，收录了沿着故事进行的「故事任务」和纯粹得分获得报酬等的「自由任务」两种。<br />
+                  <td><p class="para">在本作的主要模式「剧情模式」中，收录了沿着故事进行的「故事任务」和纯粹得分获得报酬等的「自由任务」两种。<br />
                       以下是每个任务的一些内容。<br />
                       请注意「故事任务」中播放的事件场景。</p></td>
                 </tr>
@@ -91,8 +91,8 @@
                 <tr>
                   <td class="c"><table border="0" cellpadding="0" cellspacing="3">
                       <tr>
-                        <td width="607"><p class="para">情報屋パットに教えてもらった映画の撮影現場に行くと、事故を起こしたスタントマンの代理を監督に依頼される。<br />
-  ストーマーの仕事でないとゴネるソールに「依頼を選ぶ余裕はない」と説得するゴードン。</p></td>
+                        <td width="607"><p class="para">当情报员 パット 告诉我前往影片拍摄现场时，导演会委托做替身完成特技动作。<br />
+                            当 ソール 抱怨说这不是『追踪者』的工作时，ゴードン 说服 ソール「我们没有选择委托的余地」</p></td>
                       </tr>
                       <tr>
                         <td><img src="img/img01.jpg" tppabs="mission/img/img01.jpg" alt="" width="607" height="218" border="0" class="noborder" /></td>
@@ -121,9 +121,9 @@
                   <td align="center">
                     <table border="0" cellspacing="0" cellpadding="0">
                       <tr>
-                        <td><p class="para">ライバルカーは実はホープ。<br />
-  「金のためになんでもするのか」と皮肉るソール。<br />
-  金に困っている様子のホープ達。</p></td>
+                        <td><p class="para">竞争对手其实是 ホープ。<br />
+                            ソール 讽刺道「做任何事都是为了钱」。<br />
+                            ホープ 和她的朋友们似乎很需要钱。</p></td>
                       </tr>
                     </table>
                   </td>
@@ -152,8 +152,8 @@
                 <tr>
                   <td align="center"><table border="0" cellpadding="0" cellspacing="3">
                     <tr>
-                      <td width="607"><p class="para">クララより目の前で引き逃げがあったと連絡が入り銀行前へ。<br />
-                        被害者を病院へ届けようとするが、ハートマンが暴走と思い追跡してくる。</p></td>
+                      <td width="607"><p class="para">クララ 通知我们前面有一起肇事逃逸事件，让我们前往银行。<br />
+                          想要将受害者尽快送到医院，但 ハートマン 以为在飙车，于是追了上去。</p></td>
                     </tr>
                     <tr>
                       <td><img src="img/img09.jpg" tppabs="mission/img/img09.jpg" alt="" width="660" height="205" border="0" class="noborder" /></td>
@@ -181,8 +181,8 @@
                 <tr>
                   <td align="center"><table border="0" cellspacing="0" cellpadding="0">
                       <tr>
-                        <td><p class="para">ソール達の善意が判明し、ハートマンと同乗していたウィリアムス署長も賞賛。<br />
-                          クララが刑事でハートマンの相棒と判明。</p></td>
+                        <td><p class="para">得知 ソール 等人的善意后，与 ハートマン 同车的 ウィリアムス 局长赞扬了他们。<br />
+                          クララ 原来是一名侦探，是 ハートマン 的同事。</p></td>
                       </tr>
                   </table></td>
                 </tr>
@@ -213,9 +213,9 @@
                 <tr>
                   <td align="center"><table border="0" cellpadding="0" cellspacing="3">
                       <tr>
-                        <td width="607"><p class="para">ひき逃げされたけが人を病院に運んだが、その犯人逮捕に警察が手間取っているとの情報を得る。<br />
-                          協力を申しでるソール達に憎まれ口をたたきつつも拒否はしないハートマン。<br />
-                          喜ぶクララ。と、ちょうどそこにホープ達が現れ、割り込んでくる。</p></td>
+                        <td width="607"><p class="para">把肇事逃逸的受伤人员送到了医院，他被告知，警方很难逮捕罪犯。<br />
+                            ハートマン 讨厌 ソール 和其他愿意提供帮助的人，但他没有拒绝。<br />
+                            クララ 很高兴。就在这时，ホープ 和她的朋友们出现了，并进行了干预。</p></td>
                       </tr>
                       <tr>
                         <td><img src="img/img18.jpg" tppabs="mission/img/img18.jpg" alt="" width="662" height="363" border="0" class="noborder" /></td>
@@ -249,11 +249,11 @@
                 <tr>
                   <td align="center"><table border="0" cellpadding="0" cellspacing="3">
                       <tr>
-                        <td width="607"><p class="para">ハートマンからの依頼で市警に向かうソールたち。<br />
-                          ソールたちを見直したというハートマンは、グリフィンの隠れ家の情報を得たので逮捕に協力してほしいと話す。<br />
-                          なぜ自分たちに？と訝るソールに、実はまだ逮捕状が出ていないことを告げるハートマン。<br />
-                          グリフィン警戒のため、限られた人間しか知らない情報だった。<br />
-                          グリフィンのアジトへ向かう一行。</p></td>
+                        <td width="607"><p class="para">受 ハートマン 的委托 ソール 等人前往市警察局。<br />
+                            重新审视了 ソール 等人的 ハートマン 表示得到了 グリフィン 藏身处的情报，希望能协助逮捕。<br />
+                            为什么是自己？ハートマン 向纳闷的 ソール 告知其实还没有发出逮捕令。<br />
+                          避免惊动 グリフィン、这一信息只被有限的人知道。<br />
+                            前往 グリフィン 藏身处的一行人。</p></td>
                       </tr>
                       <tr>
                         <td><img src="img/img29.jpg" tppabs="mission/img/img29.jpg" alt="" width="641" height="266" border="0" class="noborder" /></td>
@@ -264,14 +264,14 @@
                   <td>&nbsp;</td>
                 </tr>
                 <tr>
-                  <td><p class="para">ハートマンとクララが突入するが、グリフィンらしき車が逃走を。<br />
+                  <td><p class="para">ハートマン 和 クララ 冲了进去、グリフィン 有辆汽车似乎正在逃跑。<br />
                     <br />
-                    車に乗っていたのは部下のミランダだった。<br />
-                    急遽アジトに引き返したソールたちだったが、屋敷はもぬけの殻。<br />
-                    さらには、彼らをあざ笑うかのようなグリフィンの置手紙。<br />
-                    情報の信憑性と秘匿に絶対の自信を持つハートマンは、ソールたちが内通したのではないかと疑う。<br />
-                    激怒するソールだったが、捨て台詞をはいて去っていくハートマン。<br />
-                  とそこへ、パットから連絡。スラム街へ向かう二人。<br />
+                      坐在车上的是部下 ミランダ。<br />
+                      ソール 等人匆忙来到的藏身处，但房子里空无一人。<br />
+                      另外，グリフィン 的信似乎在嘲笑他们。<br />
+                      对情报的可靠性和保密性有绝对自信的 ハートマン 怀疑 ソール 等人是不是泄密了。<br />
+                      ソール 很生气，但 ハートマン 给他留了几句话。<br />
+                      然后，パット 联系。两人前往贫民窟。<br />
                   </p></td>
                 </tr>
                 <tr>
@@ -296,7 +296,7 @@
                   <td align="center"><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
                 </tr>
                 <tr>
-                  <td><p class="para">フリーミッションでは、様々な車種の車を使いミッションに挑みます。</p></td>
+                  <td><p class="para">在自由任务中，使用各种车型的车挑战任务。</p></td>
                 </tr>
                 <tr>
                   <td align="center"><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
@@ -319,7 +319,7 @@
                   <td><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
                 </tr>
                 <tr>
-                  <td><p class="para">どこかで見たような場所・・・も登場する。</p></td>
+                  <td><p class="para">一些在某处看到的地方・・・也会出现。</p></td>
                 </tr>
                 <tr>
                   <td align="center"><img src="../common/img/all/spacer.gif" tppabs="common/img/all/spacer.gif" alt="" width="1" height="20" /></td>
