--- a/index.php.htm
+++ b/index.php.htm
@@ -81,7 +81,9 @@
           </table></td>
         </tr>
         <tr>
-          <td colspan="2" align="center">&copy;</td>
+          <td colspan="2" align="center">&copy;<br>
+            「<a href="README.html">项目声明 | 请先阅读</a>」</td>
+          <br>
           </tr>
         <tr>
           <td></td>
