--- a/mode/index.htm
+++ b/mode/index.htm
@@ -76,9 +76,9 @@
                 <tr>
                   <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_a">
                       <tr>
-                        <td><p class="para">プレイヤーは主人公「ソール」となり、ストーリーに沿って、様々な依頼や事件(ミッション)をクリアしていくモードです。<br />
-              ミッション発生ポイントに到着すると、キャラクターイベントがスタートします。<br />
-              キャラクターイベントではアクション映画さながらのムービーが展開し、ミッションを盛りあげます。</p></td>
+                        <td><p class="para">玩家成为主人公「ソール」，根据故事情节完成各种委托和事件（任务）的模式。<br />
+                            当您到达任务发生点时，角色事件将开始。<br />
+                            在角色事件中，将展开动作片般的影片，为任务增添活力。</p></td>
                       </tr>
                   </table></td>
                 </tr>
@@ -106,9 +106,9 @@
                 <tr>
                   <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                       <tr>
-                        <td><p class="para">ストーリーに沿って請け負うミッション。<br />
-                          依頼内容は「追跡」「逃走」にはじまり、「運搬」「護送」「破壊」「レース」など様々。<br />
-依頼をクリアすると、ストーリーが進展し次の依頼へと移っていきます。</p></td>
+                        <td><p class="para">沿着故事进行的任务。<br />
+                            委托内容从「追踪」「逃跑」到「运输」「护送」「破坏」「竞赛」等。<br />
+                            如果完成委托的话，故事会发展到下一个委托。</p></td>
                       </tr>
                   </table></td>
                 </tr>
@@ -141,20 +141,20 @@
                 <tr>
                   <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b" width="660">
                     <tr>
-                      <td><p class="para">時は現代。雄大な自然と洗練された都市部を併せ持つ、歴史ある街、プリヨシティ。<br />
-                        しかし、再開発による急激な人口増加の為、犯罪率が上昇し、ひったくりやひき逃げ、強盗などは後を絶たない。<br />
-                        市警は全力を尽くしているがとても追いつかず、若者達を中心としたギャングが、大きな犯罪組織として成長しつつある。<br />
+                      <td><p class="para">时间是现代。プリヨシティ 是一座历史悠久的城市，结合了壮丽的自然风光和精致的市区。<br />
+                          然而，由于重建导致人口迅速增长，犯罪率上升，抢夺、肇事逃逸、抢劫等事件层出不穷。<br />
+                          市警竭尽全力却怎么也追不上，一个由年轻人组成的团伙正在成长为一个大型犯罪组织。<br />
                         <br />
-                        この街に来たばかりの主人公ソールと相棒のゴードン。<br />
-                        彼らは『ストーマー』と呼ばれる、この世界特有の職を生業としている。<br />
+                          刚到这座城市的主角 ソール 和他的同伴 ゴードン。<br />
+                          他们被称为『追踪者』，是这个世界特有的职业。<br />
                         <br />
-                        『ストーマー』とは、高度なドライビングテクニックで車を操り、高額の報酬と引き換えに様々な依頼をこなすことを生業とし、目的完遂の為には法に触れる事も辞さない、荒っぽい賞金稼ぎのような存在。<br />
-                        ふとした事で出会ったヒロイン、ホープとそのパートナーのディアナ。彼女達もまた『ストーマー』だった。<br />
+                          所谓的『追踪者』，是指用高超的驾驶技术操纵汽车，以高额报酬来完成各种各样委托的职业，为了达到目的不惜触犯法律，像粗暴的赏金猎人一样的存在。<br />
+                          偶然遇见的女主角 ホープ 和她的同伴 ディアナ。她们也是『追踪者』。<br />
                         <br />
-                        ストーマーを敵視している市警のベテラン刑事ハートマンや、商売敵のホープとディアナ達の妨害をかわし、今日も街を爆走するソール＆ゴードン。<br />
-                        妨害をものともせずに着々と依頼をこなすソール達だが、裏の世界で暗躍するギャングにまで目をつけられてしまう。<br />
+                          ソール 和 ゴードン 今天正在逃亡，躲避对『追踪者』有敌意市警资深侦探 ハートマンや 以及他们的商业对手 ホープ 和 ディアナ 的妨碍。<br />
+                          虽然 ソール 他们不顾妨碍，一步步地完成委托，但却被在暗地里活动的黑帮盯上了。<br />
                         <br />
-                        そして、彼らは街を包む大きな陰謀へと巻き込まれてゆくのだった！<br />
+                          于是，他们被卷入了一个笼罩在这座城市的大阴谋！<br />
                       </p></td>
                     </tr>
                   </table></td>
@@ -171,9 +171,9 @@
                 <tr>
                   <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                       <tr>
-                        <td><p class="para">依頼を請け負うか任意に選べるミッション。<br />
-              ポイント稼ぎ、報酬稼ぎなどを行う、ストーリー進展とは直接関連しないミッションです。<br />
-              お遊び的ミッションも楽しめます。</p></td>
+                        <td><p class="para">可以任意选择接受委托的任务。<br />
+                            这是一个与故事进度没有直接关系的任务，例如赚取积分，赚取奖励等。<br />
+                            您还可以享受有趣的任务。</p></td>
                       </tr>
                   </table></td>
                 </tr>
@@ -206,9 +206,9 @@
                 <tr>
                   <td><table border="0" cellpadding="0" cellspacing="0" class="paraMargin_b">
                       <tr>
-                        <td><p class="para">シナリオモードで一度クリアしたことがある「ストーリーミッション／フリーミッション」を<br />
-                          個別に遊ぶ事が出来るモードです。<br />
-              このモードでは「フリーラン」は含まれず、ミッションクリア後はミッション選択画面に戻ります。</p></td>
+                        <td><p class="para">剧情模式中已通关一次「故事任务/自由任务」<br />
+                          此模式允许你单独进行游戏。<br />
+                          此模式不包含「自由活动」，通关任务后会返回任务选择界面。</p></td>
                       </tr>
                   </table></td>
                 </tr>
